<resources>
    <string name="app_name">TomofilyaSprint1</string>
    <string name="welcome_text">Selam Tomofilya\'ya Hoşgeldin !</string>
    <string name="tv_name_surname">     Ad - Soyad</string>
    <string name="email">     Email</string>
    <string name="password">     Parola</string>
    <string name="register"> Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="check_box_text">Tomofilya ürün ve hizmetleri ile ilgili ticari elektronik ileti (e-posta ve sms) almak istiyorum.</string>
    <string name="user_contract">Uygulamaya üye olarak; Üyelik Sözleşmesi’ni ve Kişisel Veriler ile İlgili Aydınlatma Metni’ni okuduğunuzu ve kabul ettiğinizi onaylamaktasınız.</string>
    <string name="or_part">     ya da   </string>
    <string name="cont_w_google">        Google ile Devam Et</string>
    <string name="cont_w_apple">       Apple ile Devam Et</string>
    <string name="did_you_forgot_password">Parolanı mı unuttun?</string>
    <string name="forgot_password">Parolamı Unuttum</string>
    <string name="enter_email">Mailini Gir</string>
    <string name="send_email_description">Sana parola yenileme linki göndermemiz için mail adresini girmelisin.</string>
    <string name="cancel">Vazgeç</string>
    <string name="send">Gönder</string>
    <string name="image">görsel</string>
    <string name="register_or_login">Kayıt Ol / Giriş Yap</string>
    <string name="start_using">Kullanmaya Başla</string>
    <string name="confirm_email">Mail Doğrulama</string>
    <string name="check_mail_text">Mailini Kontrol Et</string>
    <string name="check_mail_info">Mail adresine gönderdiğimiz 4 haneli kodu girmelisin</string>
    <string name="did_you_receive">Kodu almadın mı?</string>
    <string name="send_again">Yeniden Gönder</string>
    <string name="reset_pass">Parola Sıfırlama</string>
    <string name="new_pass">Yeni Parola</string>
    <string name="repeat_pass">Tekrar Yeni Parola</string>
    <string name="change_pass">Parolayı Değiştir</string>
    <string name="server_client_id">...e4p8.apps.googleusercontent.com</string>
    <string name="please_wait">Lütfen Bekleyiniz</string>
    <string name="emailStr">email</string>
    <string name="code">code</string>
    <string name="acceptTerms">"Lütfen Hüküm ve Koşulları Kabul Ediniz"</string>
    <string name="searchBarText">Ürün / Kategori / Marka / Garaj ara</string>
    <string name="categories">Kategoriler</string>
    <string name="seeAll">Tümünü Gör</string>
    <string name="spareParts">Araç &amp; Yedek Parça                     &amp; Aksesuar</string>
    <string name="tire">Jant &amp; Lastik</string>
    <string name="repair">Bakım &amp; Onarım</string>
    <string name="fastest">En Hızlı Garajlar</string>
    <string name="tomoClub">Tomoclub &amp;                           Market &amp; Tekstil</string>
    <string name="musicSound">Ses &amp; Görüntü                         Sistemleri</string>
    <string name="tools">Garaj Ekipman                              &amp; Alet</string>
    <string name="garageName">kardeslergaraj</string>
    <string name="öneçıkanlar">Öne Çıkan Ürünler</string>
    <string name="carBrand">Toyoto Corollo</string>
    <string name="carPart">Sol Arka Kapı</string>
    <string name="carPrice">₺859.95</string>
    <string name="carPriceStrike"> <strike> ₺859.95 </strike></string>
    <string name="discountedPrice">₺640</string>
    <string name="announcements">Duyurular</string>
    <string name="announcementTitle">Duyuru Başlığı</string>
    <string name="events">Etkinlik</string>
    <string name="eventName">Etkinlik Adı</string>
    <string name="eventLoc">Etkinlik Konumu</string>
    <string name="lastUploadedVidedo">Son Yüklenen Video</string>
    <string name="videoName">Video Başlığı</string>
    <string name="dictionary">Sözlük</string>
    <string name="homePage">Ana Sayfa</string>
    <string name="messages">Mesajlar</string>
    <string name="myGarage">Garajım</string>
    <string name="shopCard">Sepetim</string>
    <string name="profile">Profil</string>
    <string name="seeEvent">Etkinliği Gör</string>
    <string name="eventText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="popularSearch">Popüler Aramalar</string>
    <string name="pastaCila">Pasta, Cila</string>
    <string name="hidrolik">Fren Hidroliği</string>
    <string name="lastik">Lastik</string>
    <string name="popularCategories">Popüler Kategoriler</string>
    <string name="antifriz">Antifriz</string>
    <string name="cleaning">İç Temizlik &amp; Koku</string>
    <string name="handTools">El Aletleri</string>
    <string name="cila">Cila</string>
    <string name="cleanLastSearched">Son Aramaları Temizle</string>
    <string name="lastSearches">Son Aramalar</string>
    <string name="relatedResults">İlgili Sonuçlar</string>
    <string name="hondaBrand">Honda</string>
    <string name="category">Kategori</string>
    <string name="exampleGarageName">yukaritokyo</string>
    <string name="garage">Garaj</string>
    <string name="filter">Filtrele</string>
    <string name="sort">Sırala</string>
    <string-array name="categoriesArray">
        <item>Araç &amp; Yedek Parça &amp; Aksesuar</item>
        <item>Jant &amp; Lastik</item>
        <item>Bakım &amp; Onarım</item>
        <item>Tomoclub &amp; Market &amp; Tekstil</item>
        <item>>Ses &amp; Görüntü Sistemleri</item>
        <item>>Garaj Ekipman                &amp; Alet</item>
    </string-array>
    <string name="filtering">Filtreleme</string>
    <string name="brand">Marka</string>
    <string name="usageLevel">Kullanım Durumu</string>
    <string name="priceBand">Fiyat Aralığı</string>
    <string name="newToOld">Yeniden Eskiye</string>
    <string name="oldToNew">Eskiden Yeniye</string>
    <string name="priceBandEx">100 TL - 480 TL</string>
    <string name="categorySelection">Kategori Seçimi</string>
    <string name="searchCategory">Kategori ara </string>
    <string name="save">Kaydet</string>
    <string name="sparePartsForCat">Araç &amp; Yedek Parça &amp; Aksesuar</string>
    <string name="automobi">Otomobil</string>
    <string name="autoTypes">Suv &amp; Arazi &amp; Pick Up</string>
    <string name="motorbike">Motorsiklet &amp; Atv-Utv &amp; Carting</string>
    <string name="commercial">Ticari Araçlar</string>
    <string name="rcModels">RC Modeller</string>
    <string name="classicalCar">Klasik Araçlar</string>
    <string name="karavan">Karavan &amp; Römork</string>
    <string name="electricalCars">Diğer &amp; Özel &amp; Elektrikli Araçlar</string>
    <string name="anten">Anten</string>
    <string name="aspirator">Aspiratör</string>
    <string name="mirror">Ayna</string>
    <string name="bagageGlove">Bagaj Merdiveni</string>
    <string name="bisikletAskisi">Bisiklet Askısı</string>
    <string name="freezer"><![CDATA[Buzdolabı & Dondurucu]]></string>
    <string name="cekiDemiri">Çeki Demiri</string>
    <string name="cekiKafasi">Çeki Kafası</string>
    <string name="cekmeEkipmanlari">Çekme Ekipmanları</string>
    <string name="dedantor">Dedantör</string>
    <string name="dolap">Dolap</string>
    <string name="electricalWc">Elektrikli Tuvalet</string>
    <string name="evye">Evye</string>
    <string name="girisBasamagi">Giriş Basamağı</string>
    <string name="havalandirma">Havalandırma</string>
    <string name="heater">Isıtıcı</string>
    <string name="searchBrand">Marka ara</string>
    <string name="sorting">Sıralama</string>
    <string name="price">Fiyat</string>
    <string name="maxPriceToMinPrice">En Yüksekten Düşüğe</string>
    <string name="minPriceToMaxPrice">En Düşükten Yükseğe</string>
    <string name="itemNotFoundText">Ne yazık ki aramızla eşleşen ürün bulamadık. Talep oluşturun ve garajlar sizin için talep ettiğiniz ürünü bulsunlar.</string>
    <string name="createRequest">Talep Oluştur</string>
    <string name="itemRequest">Ürün Talebi</string>
    <string name="itemName">Ürün Adı</string>
    <string name="itemNameHint">Motor Yağı (Min. 5 karakter)</string>
    <string name="itemRequestDesc">Ürün Açıklaması</string>
    <string name="itemRequestDescEx">Ürünü daha iyi anlamamız için bir kaç      cümle ile bizimle paylaşmalısın…</string>
    <string name="generateRequest">Talep Oluştur</string>
    <string name="categoryNotFound">Aradığın kategoriyi bulamadın mı ?</string>
    <string name="generateBrandRequest">Marka Talebi Oluştur</string>
    <string name="brandRequest">Marka Talebi</string>
    <string name="brandReqText">Ne yazık ki aramızla eşleşen marka bulamadık. Talep oluşturun ve ekibimiz sizin için talebinizi incelesin.</string>
    <string name="generateBrandReqBtn">Talep Oluştur</string>
    <string name="brandCode">Ürün Kodu</string>
    <string name="productSituation">Ürünün Durumu</string>
    <string name="notUsed">Kullanılmamış</string>
    <string name="brandNew">(paketli, sıfır ürün)</string>
    <string name="used">2. El</string>
    <string name="workingFine">(çalışır, iyi durumda)</string>
    <string name="productProposal">Ürünün Teklif Durumu</string>
    <string name="openForOffer">Tekliflere Açık</string>
    <string name="closedForOffer">Tekliflere Kapalı</string>
    <string name="extraInfo">Ek Bilgiler</string>
    <string name="shipmentSize">Kargo Boyutu</string>
    <string name="continueRequest">Devam</string>
    <string name="generateCategoryRequest">Kategori Talebi Oluştur</string>
    <string name="brandRequestTxt">Marka Talebi</string>
    <string name="categoryRequestTxt">Kategori Talebi</string>
    <string name="productPrice">Ürün Fiyatı</string>
    <string name="shipmentPrice">Kargo Fiyatı</string>
    <string name="hizmetBedeli">Hizmet Bedeli</string>
    <string name="addPhotos">Fotoğraf Ekle</string>
    <string name="galery">galeri</string>
    <string name="exceededPhotoLimit">Maksimum fotoğraf limitine ulaştınız</string>


</resources>