<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="homePageItemRequestViewModel"
            type="com.sabanciuniv.tomofilyasprint1.viewModel.HomePageItemRequestViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitiesModel.HomePageItemRequest">
    <Button
        android:id="@+id/backBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/arrowicon"
        >

    </Button>

    <TextView
        android:layout_width="70dp"
        android:layout_height="17dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:text="@string/itemRequest">

    </TextView>
<LinearLayout
    android:id="@+id/linearHolder"
    android:layout_width="match_parent"
    android:layout_height="590dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="91dp"
    android:background="@drawable/item_request_rect_holder"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="52dp"
        android:layout_height="17dp"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:text="@string/itemName">

    </TextView>

    <EditText
        android:id="@+id/itemReqNameText"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:layout_marginLeft="24dp"
        android:background="@drawable/item_request_button_rounded"
        android:textColorHint="@color/item_request_color"
        android:textSize="14dp"
        android:hint="@string/itemNameHint"
        android:paddingLeft="20dp"
        >

    </EditText>
    
    <TextView
        android:layout_width="64dp"
        android:layout_height="17dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:text="@string/brandCode"
        >

    </TextView>
    
    <EditText
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="14dp"

        android:paddingLeft="25dp"
        android:hint="34934729858"
        android:textColorHint="@color/item_request_color"
        android:background="@drawable/item_request_button_rounded">

    </EditText>
    
    <TextView
        android:layout_width="99dp"
        android:layout_height="17dp"
        android:layout_marginTop="32dp"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:text="@string/itemRequestDesc"
        android:layout_marginLeft="24dp">

    </TextView>
    
    <EditText
        android:id="@+id/itemReqDescText"
        android:layout_width="342dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/white"
        android:background="@drawable/item_request_button_rounded"
        android:textColorHint="@color/item_request_color"
        android:textSize="14dp"
        android:paddingBottom="15dp"
        android:hint="@string/itemRequestDescEx"
        android:paddingLeft="25dp">


    </EditText>
    
    <TextView
        android:layout_width="97dp"
        android:layout_height="17dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:text="@string/productSituation">

    </TextView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/item_request_category_brand">
            <TextView
                android:id="@+id/notUsedTv"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="33dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:text="@string/notUsed">

            </TextView>

            <TextView
                android:id="@+id/notUsedTv2"
                android:layout_width="72dp"
                android:layout_height="11dp"
                android:textColor="@color/item_request_color"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="29dp"
                android:textSize="8dp"
                android:text="@string/brandNew"
                >

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginLeft="14dp"
            android:background="@drawable/item_request_category_brand">
            <TextView
                android:id="@+id/secondHandTv"
                android:layout_width="28dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="69dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:text="@string/used">

            </TextView>

            <TextView
                android:id="@+id/secondHandTv2"
                android:layout_width="83dp"
                android:layout_height="11dp"
                android:textColor="@color/item_request_color"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="29dp"
                android:textSize="8dp"
                android:text="@string/workingFine"
                >

            </TextView>

        </RelativeLayout>

    </LinearLayout>
    
    <TextView
        android:layout_width="130dp"
        android:layout_height="17dp"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        android:text="@string/productProposal">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <Button
            android:id="@+id/openForOffer"
            android:layout_width="164dp"
            android:layout_height="44dp"
            android:layout_marginLeft="24dp"
            android:text="@string/openForOffer"
            android:textAlignment="center"
            android:background="@drawable/item_request_category_brand"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14dp">

        </Button>

        <Button
            android:id="@+id/closedForOffer"
            android:layout_width="164dp"
            android:layout_height="44dp"
            android:layout_marginLeft="24dp"
            android:text="@string/closedForOffer"
            android:textAlignment="center"
            android:background="@drawable/item_request_category_brand"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14dp">

        </Button>



    </LinearLayout>
    
    
</LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/linearHolder2"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearHolder"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/item_request_rect_holder">

        <TextView
            android:layout_width="57dp"
            android:layout_height="17dp"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="24dp"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:text="@string/extraInfo">
        </TextView>

        <LinearLayout
            android:id="@+id/categoriesHolder"
            android:layout_width="342dp"
            android:layout_height="44dp"
            android:background="@drawable/item_request_category_brand"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/categorySelectionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:paddingTop="12dp"
                android:textAlignment="textStart"
                android:text="@string/category"
                android:paddingLeft="20dp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:layout_marginLeft="180dp">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/brandHolder"
            android:layout_width="342dp"
            android:layout_height="44dp"
            android:background="@drawable/item_request_category_brand"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/brandSelectionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/item_request_category_brand"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:paddingTop="12dp"
                android:textAlignment="textStart"
                android:text="@string/brand"
                android:paddingLeft="20dp">

            </TextView>

            <TextView
                android:id="@+id/brandText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:layout_marginLeft="190dp">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/shipmentHolder"
            android:layout_width="342dp"
            android:layout_height="44dp"
            android:background="@drawable/item_request_category_brand"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cargoSelectionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:textAlignment="textStart"
                android:text="@string/shipmentSize"
                android:paddingLeft="20dp">

            </TextView>

            <TextView
                android:id="@+id/cargoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="155dp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14dp"


                >

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/priceHolder"
            android:layout_width="342dp"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/item_request_category_brand">

            <TextView
                android:id="@+id/priceSelectionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:textAlignment="textStart"
                android:text="@string/price"
                android:paddingTop="12dp"
                android:paddingLeft="20dp">

            </TextView>

            <TextView
                android:id="@+id/priceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:textColor="@color/white"
                android:textSize="14dp"
                >

            </TextView>

        </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/addProductReqBtn"
        android:layout_width="304dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearHolder2"
        android:background="@drawable/register_button_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/continueRequest"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="48dp"
        android:textAllCaps="false"
        android:textSize="14dp"
        android:textAlignment="center"
        >

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>