<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="homeSearchViewModel"
            type="com.sabanciuniv.tomofilyasprint1.viewModel.HomeSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivitiesModel.HomePageSearch"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/backBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/arrowicon"
            >

        </Button>

        <LinearLayout
            android:id="@+id/searchHolder"
            android:layout_width="290dp"
            android:layout_height="44dp"
            android:layout_marginTop="49dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/border_rounded">
            <EditText
                android:id="@+id/searchArea"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11dp"
                android:layout_marginTop="3dp"
                android:hint="@string/searchBarText"
                android:textColorHint="@android:color/white"
                >

            </EditText>

        </LinearLayout>
        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/searchHolder"
            android:layout_marginTop="49dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="330dp"
            android:background="@drawable/home_page_rounded"
            android:src="@drawable/search"
            android:layout_marginRight="20dp">

        </ImageButton>

        <TextView
            android:id="@+id/popularSearch"
            android:layout_width="109dp"
            android:layout_height="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backBtn"
            android:textColor="@color/light_grey"
            android:textSize="12dp"
            android:text="@string/popularSearch">
        </TextView>
        
        <LinearLayout
            android:id="@+id/linearHolder1"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popularSearch"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pastaCilaBtn"
                android:layout_width="108dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:textAllCaps="false"
                android:text="@string/pastaCila"
                android:textSize="10dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/category_btn_rect">
            </Button>

            <Button
                android:id="@+id/hidrolikBtn"
                android:layout_width="108dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/light_grey"
                android:textSize="10dp"
                android:background="@drawable/category_btn_rect"
                android:layout_marginLeft="13dp"
                android:text="@string/hidrolik">

            </Button>

            <Button
                android:id="@+id/handToolsBtn"
                android:layout_width="108dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/light_grey"
                android:textSize="10dp"
                android:background="@drawable/category_btn_rect"
                android:layout_marginLeft="13dp"
                android:text="@string/handTools">

            </Button>

        </LinearLayout>

        <TextView
            android:id="@+id/popularCategories"
            android:layout_width="118dp"
            android:layout_height="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="32dp"
            android:text="@string/popularCategories"
            android:textColor="@color/light_grey"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearHolder1">

        </TextView>

        <LinearLayout
            android:id="@+id/linearHolder2"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popularCategories"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/antifrizBtn"
                android:layout_width="108dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:textAllCaps="false"
                android:text="@string/antifriz"
                android:textSize="10dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/category_btn_rect">
            </Button>

            <Button
                android:id="@+id/cleaningBtn"
                android:layout_width="108dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/light_grey"
                android:textSize="10dp"
                android:background="@drawable/category_btn_rect"
                android:layout_marginLeft="13dp"
                android:text="@string/cleaning">

            </Button>

            <Button
                android:id="@+id/lastikBtn"
                android:layout_width="108dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/light_grey"
                android:textSize="10dp"
                android:background="@drawable/category_btn_rect"
                android:layout_marginLeft="13dp"
                android:text="@string/lastik">

            </Button>

        </LinearLayout>
        
        <Button
            android:id="@+id/clearLastSearchesBtn"
            android:layout_width="115dp"
            android:layout_height="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearHolder2"
            android:background="@color/black"
            android:textColor="@color/primary_app_color"
            android:textSize="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="259dp"
            android:textAllCaps="false"
            android:text="@string/cleanLastSearched">

        </Button>

        <TextView
            android:layout_width="85dp"
            android:layout_height="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearHolder2"
            android:textColor="@color/light_grey"
            android:textSize="12dp"
            android:text="@string/lastSearches">

        </TextView>

        <Button
            android:id="@+id/cilaBtn"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/category_btn_rect"
            android:textColor="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clearLastSearchesBtn"
            android:layout_marginTop="18dp"
            android:text="@string/cila"
            android:textAllCaps="false"
            android:textSize="10dp">

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>